--- a/11-01.md
+++ b/11-01.md
@@ -1,85 +1,49 @@
-# Домашнее задание к занятию 11.1 "Базы данных, их типы"
-
-Домашнее задание выполните в Google Docs и отправьте в личном кабинете на проверку ссылку на ваш документ.
-
-Название файла должно содержать номер лекции и фамилию студента. Пример названия: "11.1 Базы данных, их типы - Александр Александров"
-
-Перед тем как выслать ссылку, убедитесь, что ее содержимое не является приватным (открыто на просмотр всем, у кого есть ссылка). Если необходимо прикрепить дополнительные ссылки, просто добавьте их в свой Google Docs.
-
-Любые вопросы по решению задач задавайте в чате учебной группы.
-
+# Домашнее задание к занятию 11.1 "Базы данных, их типы" - Андрей Роговский
 ---
 
-### Задание 1. СУБД
+Задание 1. СУБД
+Кейс
+Крупная строительная компания, которая так же занимается проектированием и девелопментом, решила создать правильную архитектуру для работы с данными. Ниже представлены задачи, которые необходимо решить для каждой предметной области.
+Какие типы СУБД, на Ваш взгляд, лучше всего подойдут для решения этих задач и почему?
+1.1 Бюджетирование проектов с дальнейшим формированием финансовых аналитических отчетов и прогнозирования рисков (СУБД должна гарантировать целостность и четкую структуру данных).
 
-### Кейс
-Крупная строительная компания, которая так же занимается проектированием и девелопментом, решила создать 
-правильную архитектуру для работы с данными. Ниже представлены задачи, которые необходимо решить для
-каждой предметной области. 
+Считаю, тут нужна классическая реляционная модель СУБД, думаю, она обеспечит необходимые условия целостности и четкой структуры.
 
-Какие типы СУБД, на Ваш взгляд, лучше всего подойдут для решения этих задач и почему? 
- 
-1.1 Бюджетирование проектов с дальнейшим формированием финансовых аналитических отчетов и прогнозирования рисков
-(СУБД должна гарантировать целостность и четкую структуру данных).
+1.2 Под каждый девелоперский проект создается отдельный лендинг и все данные по лидам стекаются в CRM к маркетологам и менеджерам по продажам. Какой тип СУБД лучше использовать для лендингов и для CRM? (СУБД должны быть гибкими и быстрыми).
 
-1.1* Хеширование стало занимать длительно время, какое API можно использовать для ускорения работы? 
+Если для лендингов по всем проектам используется одинаковый набор собираемых и передаваемых данных, тогда для всего можно использовать реляционную модель, если структура данных не четкая, то для лендингов подойдет документо-ориентированные СУБД, но для CRM все же использовать реляционную модель.
 
-1.2 Под каждый девелоперский проект создается отдельный лендинг и все данные по лидам стекаются в CRM к 
-маркетологам и менеджерам по продажам. Какой тип СУБД лучше использовать для лендингов и для CRM? 
-(СУБД должны быть гибкими и быстрыми).
+1.3 Отдел контроля качества решил создать базу по корпоративным нормам и правилам, обучающему материалу и так далее, сформированную согласно структуры компании (СУБД должна иметь простую и понятную структуру).
 
-1.2* Можно ли данную задачу закрыть одной СУБД? И если да, то какой именно СУБД и какой реализацией?
+Думаю, в этом случае правильным выбором будет NoSQL с иерархической моделью хранения данных согласно структуры компании.
 
-1.3 Отдел контроля качества решил создать базу по корпоративным нормам и правилам, обучающему материалу 
-и так далее, сформированную согласно структуры компании (СУБД должна иметь простую и понятную структуру).
+1.4 Департамент логистики нуждается в решении задач по быстрому формированию маршрутов доставки материалов по объектам и распределению курьеров по маршрутам с доставкой документов (СУБД должна уметь быстро работать со связями).
 
-1.3* Можно ли под эту задачу использовать уже существующую СУБД из задач выше и если да, то как лучше это 
-реализовать?
+Думаю, подойдет вариант сетевой или графовой СУБД.
 
-1.4 Департамент логистики нуждается в решении задач по быстрому формированию маршрутов доставки материалов 
-по объектам и распределению курьеров по маршрутам с доставкой документов (СУБД должна уметь быстро работать
-со связями).
 
-1.4* Можно ли к этой СУБД подключить отдел Закупок или для них лучше сформировать свою СУБД в связке с СУБД 
-логистов?
+Задание 2. Транзакции.
+2.1 Пользователь пополняет баланс счета телефона, распишите пошагово какие действия должны произойти для того, чтобы транзакция завершилась успешно (ориентируйтесь на 6 действий).
+При пополнении баланса телефона с карты:
+проверка баланса карты
+списание средств с карты
+проверка баланса карты (контроль списания средств)
+проверка баланса телефона
+зачисление средств на баланс телефона
+проверка баланса телефона (контроль зачисления средств)
 
-1.5* Можно ли все перечисленные выше задачи решить используя одну СУБД? Если да, то какой именно?
 
-*Приведите ответ в свободной форме.*
+Задание 3. SQL vs NoSQL
+3.1 Напишите 5 преимуществ SQL систем по отношению к NoSQL.
+более распространена
+имеет четко определенную структуру и схемы работы
+эффективно обрабатывает большие и сложные запросы
+обеспечивает более надежную целостность данных
+единый язык разработки
 
----
 
-### Задание 2. Транзакции.
+Задание 4. Кластеры
+Необходимо производить большое количество вычислений при работе с огромным количеством данных, под эту задачу выделено 1000 машин.
+На основе какого критерия будете выбирать тип СУБД и какая модель распределенных вычислений здесь справится лучше всего и почему?
+На основе знаний, полученных на просторах интернета при изучении данного вопроса я бы скорее склонялся к использованию CP системы при выборе класса СУБД, что касается модели распределенных вычислений, я бы попробовал MapReduce. Сложно оперировать чисто теоретическими знаниями. 
 
-2.1 Пользователь пополняет баланс счета телефона, распишите пошагово какие действия должны произойти для того, чтобы 
-транзакция завершилась успешно (ориентируйтесь на 6 действий).
-
-2.1* Какие действия должны произойти, если пополнение счета телефона происходило бы через автоплатеж?
-
-*Приведите ответ в свободной форме.*
-
----
-
-### Задание 3. SQL vs NoSQL
-
-3.1 Напишите 5 преимуществ SQL систем по отношению к NoSQL. 
-
-3.1* Какие, на Ваш взгляд, преимущества у NewSQL систем перед SQL и NoSQL.
-
-*Приведите ответ в свободной форме.*
-
----
-
-### Задание 4. Кластеры
-
-Необходимо производить большое количество вычислений при работе с огромным количеством данных, под эту задачу 
-выделено 1000 машин. 
-
-На основе какого критерия будете выбирать тип СУБД и какая модель *распределенных вычислений* 
-здесь справится лучше всего и почему?
-
-*Приведите ответ в свободной форме.*
-
----
-
-Задания,помеченные звездочкой * - дополнительные (не обязательные к выполнению) и никак не повлияют на получение вами зачета по этому домашнему заданию. Вы можете их выполнить, если хотите глубже и/или шире разобраться в материале.
