--- a/11-01.md
+++ b/11-01.md
@@ -5,41 +5,43 @@
 Кейс
 Крупная строительная компания, которая так же занимается проектированием и девелопментом, решила создать правильную архитектуру для работы с данными. Ниже представлены задачи, которые необходимо решить для каждой предметной области.
 Какие типы СУБД, на Ваш взгляд, лучше всего подойдут для решения этих задач и почему?
+
 1.1 Бюджетирование проектов с дальнейшим формированием финансовых аналитических отчетов и прогнозирования рисков (СУБД должна гарантировать целостность и четкую структуру данных).
 
-Считаю, тут нужна классическая реляционная модель СУБД, думаю, она обеспечит необходимые условия целостности и четкой структуры.
+>Считаю, тут нужна классическая реляционная модель СУБД, думаю, она обеспечит необходимые условия целостности и четкой структуры.
 
 1.2 Под каждый девелоперский проект создается отдельный лендинг и все данные по лидам стекаются в CRM к маркетологам и менеджерам по продажам. Какой тип СУБД лучше использовать для лендингов и для CRM? (СУБД должны быть гибкими и быстрыми).
 
-Если для лендингов по всем проектам используется одинаковый набор собираемых и передаваемых данных, тогда для всего можно использовать реляционную модель, если структура данных не четкая, то для лендингов подойдет документо-ориентированные СУБД, но для CRM все же использовать реляционную модель.
+?Если для лендингов по всем проектам используется одинаковый набор собираемых и передаваемых данных, тогда для всего можно использовать реляционную модель, если структура данных не четкая, то для лендингов подойдет документо-ориентированные СУБД, но для CRM все же использовать реляционную модель.
 
 1.3 Отдел контроля качества решил создать базу по корпоративным нормам и правилам, обучающему материалу и так далее, сформированную согласно структуры компании (СУБД должна иметь простую и понятную структуру).
 
-Думаю, в этом случае правильным выбором будет NoSQL с иерархической моделью хранения данных согласно структуры компании.
+>Думаю, в этом случае правильным выбором будет NoSQL с иерархической моделью хранения данных согласно структуры компании.
 
 1.4 Департамент логистики нуждается в решении задач по быстрому формированию маршрутов доставки материалов по объектам и распределению курьеров по маршрутам с доставкой документов (СУБД должна уметь быстро работать со связями).
 
-Думаю, подойдет вариант сетевой или графовой СУБД.
+>Думаю, подойдет вариант сетевой или графовой СУБД.
 
 
 Задание 2. Транзакции.
 2.1 Пользователь пополняет баланс счета телефона, распишите пошагово какие действия должны произойти для того, чтобы транзакция завершилась успешно (ориентируйтесь на 6 действий).
-При пополнении баланса телефона с карты:
-проверка баланса карты
-списание средств с карты
-проверка баланса карты (контроль списания средств)
-проверка баланса телефона
-зачисление средств на баланс телефона
-проверка баланса телефона (контроль зачисления средств)
+ При пополнении баланса телефона с карты:
+ -проверка баланса карты
+ -списание средств с карты
+ -проверка баланса карты (контроль списания средств)
+ -проверка баланса телефона
+ -зачисление средств на баланс телефона
+ -проверка баланса телефона (контроль зачисления средств)
 
 
 Задание 3. SQL vs NoSQL
 3.1 Напишите 5 преимуществ SQL систем по отношению к NoSQL.
-более распространена
-имеет четко определенную структуру и схемы работы
-эффективно обрабатывает большие и сложные запросы
-обеспечивает более надежную целостность данных
-единый язык разработки
+
+ -более распространена
+ -имеет четко определенную структуру и схемы работы
+ -эффективно обрабатывает большие и сложные запросы
+ -обеспечивает более надежную целостность данных
+ -единый язык разработки
 
 
 Задание 4. Кластеры
