--- a/11-01.md
+++ b/11-01.md
@@ -12,7 +12,7 @@
 
 1.2 Под каждый девелоперский проект создается отдельный лендинг и все данные по лидам стекаются в CRM к маркетологам и менеджерам по продажам. Какой тип СУБД лучше использовать для лендингов и для CRM? (СУБД должны быть гибкими и быстрыми).
 
-?Если для лендингов по всем проектам используется одинаковый набор собираемых и передаваемых данных, тогда для всего можно использовать реляционную модель, если структура данных не четкая, то для лендингов подойдет документо-ориентированные СУБД, но для CRM все же использовать реляционную модель.
+>Если для лендингов по всем проектам используется одинаковый набор собираемых и передаваемых данных, тогда для всего можно использовать реляционную модель, если структура данных не четкая, то для лендингов подойдет документо-ориентированные СУБД, но для CRM все же использовать реляционную модель.
 
 1.3 Отдел контроля качества решил создать базу по корпоративным нормам и правилам, обучающему материалу и так далее, сформированную согласно структуры компании (СУБД должна иметь простую и понятную структуру).
 
@@ -25,13 +25,13 @@
 
 Задание 2. Транзакции.
 2.1 Пользователь пополняет баланс счета телефона, распишите пошагово какие действия должны произойти для того, чтобы транзакция завершилась успешно (ориентируйтесь на 6 действий).
- При пополнении баланса телефона с карты:
- -проверка баланса карты
- -списание средств с карты
- -проверка баланса карты (контроль списания средств)
- -проверка баланса телефона
- -зачисление средств на баланс телефона
- -проверка баланса телефона (контроль зачисления средств)
+>При пополнении баланса телефона с карты:
++ проверка баланса карты
++ списание средств с карты
++ проверка баланса карты (контроль списания средств)
++ проверка баланса телефона
++ зачисление средств на баланс телефона
++ проверка баланса телефона (контроль зачисления средств)
 
 
 Задание 3. SQL vs NoSQL
