--- a/11-01.md
+++ b/11-01.md
@@ -28,19 +28,19 @@
 
 2.1 Пользователь пополняет баланс счета телефона, распишите пошагово какие действия должны произойти для того, чтобы транзакция завершилась успешно (ориентируйтесь на 6 действий).
 >При пополнении баланса телефона с карты:
-+ проверка баланса карты
-+ списание средств с карты
-+ проверка баланса карты (контроль списания средств)
-+ проверка баланса телефона
-+ зачисление средств на баланс телефона
-+ проверка баланса телефона (контроль зачисления средств)
+>>+ проверка баланса карты
+>>+ списание средств с карты
+>>+ проверка баланса карты (контроль списания средств)
+>>+ проверка баланса телефона
+>>+ зачисление средств на баланс телефона
+>>+ проверка баланса телефона (контроль зачисления средств)
 
 
 # Задание 3. SQL vs NoSQL
 
 3.1 Напишите 5 преимуществ SQL систем по отношению к NoSQL.
 
-+ более распространена
+>+ более распространена
 + имеет четко определенную структуру и схемы работы
 + эффективно обрабатывает большие и сложные запросы
 + обеспечивает более надежную целостность данных
