--- a/11-01.md
+++ b/11-01.md
@@ -28,12 +28,12 @@
 
 2.1 Пользователь пополняет баланс счета телефона, распишите пошагово какие действия должны произойти для того, чтобы транзакция завершилась успешно (ориентируйтесь на 6 действий).
 >При пополнении баланса телефона с карты:
->>+ проверка баланса карты
->>+ списание средств с карты
->>+ проверка баланса карты (контроль списания средств)
->>+ проверка баланса телефона
->>+ зачисление средств на баланс телефона
->>+ проверка баланса телефона (контроль зачисления средств)
+>+ проверка баланса карты
+>+ списание средств с карты
+>+ проверка баланса карты (контроль списания средств)
+>+ проверка баланса телефона
+>+ зачисление средств на баланс телефона
+>+ проверка баланса телефона (контроль зачисления средств)
 
 
 # Задание 3. SQL vs NoSQL
@@ -41,15 +41,16 @@
 3.1 Напишите 5 преимуществ SQL систем по отношению к NoSQL.
 
 >+ более распространена
-+ имеет четко определенную структуру и схемы работы
-+ эффективно обрабатывает большие и сложные запросы
-+ обеспечивает более надежную целостность данных
-+ единый язык разработки
+>+ имеет четко определенную структуру и схемы работы
+>+ эффективно обрабатывает большие и сложные запросы
+>+ обеспечивает более надежную целостность данных
+>+ единый язык разработки
 
 
 # Задание 4. Кластеры
 
 Необходимо производить большое количество вычислений при работе с огромным количеством данных, под эту задачу выделено 1000 машин.
 На основе какого критерия будете выбирать тип СУБД и какая модель распределенных вычислений здесь справится лучше всего и почему?
-На основе знаний, полученных на просторах интернета при изучении данного вопроса я бы скорее склонялся к использованию CP системы при выборе класса СУБД, что касается модели распределенных вычислений, я бы попробовал MapReduce. Сложно оперировать чисто теоретическими знаниями. 
+
+>На основе знаний, полученных на просторах интернета при изучении данного вопроса я бы скорее склонялся к использованию CP системы при выборе класса СУБД, что касается модели распределенных вычислений, я бы попробовал MapReduce. Сложно оперировать чисто теоретическими знаниями. 
 
