Update 11-01 Домашнее задание к занятию 11.1 "Базы данных, их типы".md

--- a/11-01 Домашнее задание к занятию 11.1 "Базы данных, их типы".md
+++ b/11-01 Домашнее задание к занятию 11.1 "Базы данных, их типы".md
@@ -1,7 +1,7 @@
 # Домашнее задание к занятию 11.1 "Базы данных, их типы" - Андрей Роговский
 ---
 
-# Задание 1. СУБД
+## Задание 1. СУБД
 
 Кейс
 Крупная строительная компания, которая так же занимается проектированием и девелопментом, решила создать правильную архитектуру для работы с данными. Ниже представлены задачи, которые необходимо решить для каждой предметной области.
@@ -24,7 +24,7 @@
 >Думаю, подойдет вариант сетевой или графовой СУБД.
 
 
-# Задание 2. Транзакции.
+## Задание 2. Транзакции.
 
 2.1 Пользователь пополняет баланс счета телефона, распишите пошагово какие действия должны произойти для того, чтобы транзакция завершилась успешно (ориентируйтесь на 6 действий).
 >При пополнении баланса телефона с карты:
@@ -36,7 +36,7 @@
 >+ проверка баланса телефона (контроль зачисления средств)
 
 
-# Задание 3. SQL vs NoSQL
+## Задание 3. SQL vs NoSQL
 
 3.1 Напишите 5 преимуществ SQL систем по отношению к NoSQL.
 
@@ -47,7 +47,7 @@
 >+ единый язык разработки
 
 
-# Задание 4. Кластеры
+## Задание 4. Кластеры
 
 Необходимо производить большое количество вычислений при работе с огромным количеством данных, под эту задачу выделено 1000 машин.
 На основе какого критерия будете выбирать тип СУБД и какая модель распределенных вычислений здесь справится лучше всего и почему?
